Scalene to line_profiler
Couldn' t get scalene to work

--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -2,22 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The scalene extension is already loaded. To reload it, use:\n",
+      "  %reload_ext scalene\n"
+     ]
+    }
+   ],
    "source": [
     "### import and initialize modules ###\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "%matplotlib inline\n",
-    "# if you want to use this, run  'conda install -c conda-forge scalene' for your conda env\n",
-    "%load_ext scalene \n",
-    "\n",
+    "# # if you want to use this, run  'conda install -c conda-forge scalene' for your conda env\n",
+    "# %load_ext scalene \n",
+    "%load_ext line_profiler\n",
     "import sys\n",
-    "sys.path.append(\"../code\")\n",
-    "import registration_util as util\n",
-    "from registration_project import intensity_based_registration_demo, rigid_reg_cc_demo, affine_reg_cc_demo, affine_reg_mi_demo"
+    "sys.path.append(\"source/code\")\n",
+    "from registration_project import rigid_reg_cc_demo, affine_reg_cc_demo, affine_reg_mi_demo"
    ]
   },
   {
@@ -36,7 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Registration ###"
+    "### Registration ###\n",
+    "# We can proba\n",
+    "%lprun -f affine_reg_cc_demo affine_reg_cc_demo(r\"../data/image_data/1_1_t1.tif\",r\"../data/image_data/1_1_t1_d.tif\",False) # example"
    ]
   },
   {
@@ -50,8 +62,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "8dc00",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
