Clean up and comments

--- a/source/reader/1.6_Registration_project.ipynb
+++ b/source/reader/1.6_Registration_project.ipynb
@@ -67,23 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scalene extension successfully loaded. Note: Scalene currently only\n",
-      "supports CPU+GPU profiling inside Jupyter notebooks. For full Scalene\n",
-      "profiling, use the command line version.\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -92,10 +84,7 @@
     "%autoreload 2\n",
     "\n",
     "%matplotlib inline\n",
-    "# if you want to use this, run  'conda install -c conda-forge scalene' for your conda env\n",
-    "%load_ext scalene \n",
     "\n",
-    "from scalene import scalene_profiler\n",
     "import sys\n",
     "sys.path.append(\"../code\")"
    ]
@@ -309,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -321,9 +310,7 @@
     }
    ],
    "source": [
-    "# %%scalene\n",
     "## Affine correlation test\n",
-    "%scrun --reduced-profile --profile-all\n",
     "from registration import affine_corr\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -331,8 +318,7 @@
     "Im = plt.imread('../data/image_data/1_1_t1_d.tif')\n",
     "\n",
     "x = np.array([0., 1., 1., 0., 0. ,0. ,0.])\n",
-    "C = affine_corr(I, Im, x, return_transform=False)\n",
-    "scalene_profiler.stop()"
+    "C = affine_corr(I, Im, x, return_transform=False)"
    ]
   },
   {
@@ -367,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -378,221 +364,101 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "array([[1.        ],\n",
-       "       [0.9999991 ],\n",
-       "       [0.99996685],\n",
-       "       [0.99932876],\n",
-       "       [0.98638603],\n",
-       "       [0.91028222],\n",
-       "       [0.94867321],\n",
-       "       [0.92782117],\n",
-       "       [0.93068349],\n",
-       "       [0.93001718],\n",
-       "       [0.93003566],\n",
-       "       [0.92998217],\n",
-       "       [0.92997665],\n",
-       "       [0.93002837],\n",
-       "       [0.93007383],\n",
-       "       [0.92998378],\n",
-       "       [0.92997032],\n",
-       "       [0.93003452],\n",
-       "       [0.93009047],\n",
-       "       [0.92993772],\n",
-       "       [0.93015329],\n",
-       "       [0.93007826],\n",
-       "       [0.93012769],\n",
-       "       [0.93000126],\n",
-       "       [0.93004229],\n",
-       "       [0.92993046],\n",
-       "       [0.93018619],\n",
-       "       [0.93009899],\n",
-       "       [0.93016065],\n",
-       "       [0.93007339],\n",
-       "       [0.93013234],\n",
-       "       [0.9300046 ],\n",
-       "       [0.93002419],\n",
-       "       [0.92998386],\n",
-       "       [0.92996997],\n",
-       "       [0.93003311],\n",
-       "       [0.93009385],\n",
-       "       [0.9298981 ],\n",
-       "       [0.93021396],\n",
-       "       [0.93006099],\n",
-       "       [0.93007812],\n",
-       "       [0.93000097],\n",
-       "       [0.93003347],\n",
-       "       [0.92999289],\n",
-       "       [0.92999812],\n",
-       "       [0.9300702 ],\n",
-       "       [0.93013669],\n",
-       "       [0.93001058],\n",
-       "       [0.9300219 ],\n",
-       "       [0.92999699],\n",
-       "       [0.93001349],\n",
-       "       [0.92998511],\n",
-       "       [0.92996799],\n",
-       "       [0.93007055],\n",
-       "       [0.93013608],\n",
-       "       [0.93000387],\n",
-       "       [0.93002693],\n",
-       "       [0.92998374],\n",
-       "       [0.92997832],\n",
-       "       [0.93004694],\n",
-       "       [0.93012728],\n",
-       "       [0.92999845],\n",
-       "       [0.93003222],\n",
-       "       [0.92997897],\n",
-       "       [0.93002432],\n",
-       "       [0.92998368],\n",
-       "       [0.92997746],\n",
-       "       [0.93005191],\n",
-       "       [0.93006285],\n",
-       "       [0.92994886],\n",
-       "       [0.93015935],\n",
-       "       [0.93006367],\n",
-       "       [0.93009351],\n",
-       "       [0.92989617],\n",
-       "       [0.9302155 ],\n",
-       "       [0.93004754],\n",
-       "       [0.93011414],\n",
-       "       [0.92996035],\n",
-       "       [0.93009331],\n",
-       "       [0.92990823],\n",
-       "       [0.93023457],\n",
-       "       [0.92996035],\n",
-       "       [0.93009346],\n",
-       "       [0.92990781],\n",
-       "       [0.9302317 ],\n",
-       "       [0.9299652 ],\n",
-       "       [0.93002571],\n",
-       "       [0.92998862],\n",
-       "       [0.92996433],\n",
-       "       [0.93006367],\n",
-       "       [0.93009641],\n",
-       "       [0.92994009],\n",
-       "       [0.93013532],\n",
-       "       [0.93000291],\n",
-       "       [0.93002244],\n",
-       "       [0.92998862],\n",
-       "       [0.92997634],\n",
-       "       [0.9300306 ],\n",
-       "       [0.93007918],\n",
-       "       [0.92999444],\n",
-       "       [0.93000954],\n",
-       "       [0.93000465],\n",
-       "       [0.93002719],\n",
-       "       [0.92998299],\n",
-       "       [0.92998044],\n",
-       "       [0.93005388],\n",
-       "       [0.93008218],\n",
-       "       [0.92996338],\n",
-       "       [0.93003882],\n",
-       "       [0.92997507],\n",
-       "       [0.93002476],\n",
-       "       [0.92997886],\n",
-       "       [0.9300237 ],\n",
-       "       [0.92998541],\n",
-       "       [0.92996401],\n",
-       "       [0.93006807],\n",
-       "       [0.93013347],\n",
-       "       [0.93000559],\n",
-       "       [0.93003713],\n",
-       "       [0.92998623],\n",
-       "       [0.92996432],\n",
-       "       [0.9300702 ],\n",
-       "       [0.93013795],\n",
-       "       [0.93002439],\n",
-       "       [0.93006567],\n",
-       "       [0.92995499],\n",
-       "       [0.93011572],\n",
-       "       [0.92996724],\n",
-       "       [0.93002131],\n",
-       "       [0.93000922],\n",
-       "       [0.93002316],\n",
-       "       [0.92998925],\n",
-       "       [0.92999633],\n",
-       "       [0.93005622],\n",
-       "       [0.93006366],\n",
-       "       [0.92994782],\n",
-       "       [0.93016034],\n",
-       "       [0.93006957],\n",
-       "       [0.93014176],\n",
-       "       [0.93000127],\n",
-       "       [0.93003412],\n",
-       "       [0.92998541],\n",
-       "       [0.92996231],\n",
-       "       [0.93006168],\n",
-       "       [0.9300919 ],\n",
-       "       [0.92992614],\n",
-       "       [0.9301975 ],\n",
-       "       [0.93006412],\n",
-       "       [0.93010196],\n",
-       "       [0.92997916],\n",
-       "       [0.93002405],\n",
-       "       [0.92998393],\n",
-       "       [0.92997019],\n",
-       "       [0.93003403],\n",
-       "       [0.93009092],\n",
-       "       [0.92993913],\n",
-       "       [0.93015254],\n",
-       "       [0.93007333],\n",
-       "       [0.930134  ],\n",
-       "       [0.93000627],\n",
-       "       [0.93003535],\n",
-       "       [0.92997924],\n",
-       "       [0.93002177],\n",
-       "       [0.92999742],\n",
-       "       [0.93002973],\n",
-       "       [0.92998459],\n",
-       "       [0.92997575],\n",
-       "       [0.9300296 ],\n",
-       "       [0.93007782],\n",
-       "       [0.92999216],\n",
-       "       [0.9299913 ],\n",
-       "       [0.93009191],\n",
-       "       [0.93015815],\n",
-       "       [0.93007902],\n",
-       "       [0.93008654],\n",
-       "       [0.92996847],\n",
-       "       [0.9300218 ],\n",
-       "       [0.93000489],\n",
-       "       [0.93002177],\n",
-       "       [0.92999722],\n",
-       "       [0.93002905],\n",
-       "       [0.92997403],\n",
-       "       [0.93001683],\n",
-       "       [0.93000799],\n",
-       "       [0.93001036],\n",
-       "       [0.93000387],\n",
-       "       [0.93003389],\n",
-       "       [0.92999714],\n",
-       "       [0.93002311],\n",
-       "       [0.92999444],\n",
-       "       [0.93001433],\n",
-       "       [0.92998199],\n",
-       "       [0.92998427],\n",
-       "       [0.93006582],\n",
-       "       [0.93013102],\n",
-       "       [0.92999785],\n",
-       "       [0.93003245],\n",
-       "       [0.92997514],\n",
-       "       [0.9300234 ],\n",
-       "       [0.92998744]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timer unit: 1e-07 s\n",
+      "\n",
+      "Total time: 33.5933 s\n",
+      "File: c:\\Users\\annel\\Documents\\GitHub\\project-imgreg-group19\\source\\reader\\../code\\registration_project.py\n",
+      "Function: affine_reg_cc_demo at line 105\n",
+      "\n",
+      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
+      "==============================================================\n",
+      "   105                                           def affine_reg_cc_demo(img1,img2,imshow=False,num_iter=200, learning_rate=0.001):\n",
+      "   106                                           \n",
+      "   107                                               # read the fixed and moving images\n",
+      "   108                                               # change these in order to read different images\n",
+      "   109         1     316899.0 316899.0      0.1      I = plt.imread(img1)\n",
+      "   110         1     135550.0 135550.0      0.0      Im = plt.imread(img2)\n",
+      "   111                                           \n",
+      "   112                                               # initial values for the parameters\n",
+      "   113                                               # we start with the identity transformation\n",
+      "   114                                               # most likely you will not have to change these\n",
+      "   115         1      16524.0  16524.0      0.0      x = np.array([0., 1., 1., 0., 0. ,0. ,0.])\n",
+      "   116                                               # NOTE: for affine registration you have to initialize\n",
+      "   117                                               # more parameters and the scaling parameters should be\n",
+      "   118                                               # initialized to 1 instead of 0\n",
+      "   119                                           \n",
+      "   120                                               # the similarity function\n",
+      "   121                                               # this line of code in essence creates a version of rigid_corr()\n",
+      "   122                                               # in which the first two input parameters (fixed and moving image)\n",
+      "   123                                               # are fixed and the only remaining parameter is the vector x with the\n",
+      "   124                                               # parameters of the transformation\n",
+      "   125         1         30.0     30.0      0.0      fun = lambda x: reg.affine_corr(I, Im, x, return_transform=False)\n",
+      "   126                                               # the learning rate\n",
+      "   127         1          4.0      4.0      0.0      mu = learning_rate\n",
+      "   128                                           \n",
+      "   129                                               # number of iterations\n",
+      "   130         1          5.0      5.0      0.0      num_iter = num_iter\n",
+      "   131                                           \n",
+      "   132         1        172.0    172.0      0.0      iterations = np.arange(1, num_iter+1)\n",
+      "   133         1        483.0    483.0      0.0      similarity = np.full((num_iter, 1), np.nan)\n",
+      "   134         1          5.0      5.0      0.0      if imshow:\n",
+      "   135                                                   fig = plt.figure(figsize=(14,6))\n",
+      "   136                                           \n",
+      "   137                                                   # fixed and moving image, and parameters\n",
+      "   138                                                   ax1 = fig.add_subplot(121)\n",
+      "   139                                           \n",
+      "   140                                                   # fixed image\n",
+      "   141                                                   im1 = ax1.imshow(I)\n",
+      "   142                                                   # moving image\n",
+      "   143                                                   im2 = ax1.imshow(I, alpha=0.7)\n",
+      "   144                                                   # parameters\n",
+      "   145                                                   txt = ax1.text(0.3, 0.95,\n",
+      "   146                                                       np.array2string(x, precision=5, floatmode='fixed'),\n",
+      "   147                                                       bbox={'facecolor': 'white', 'alpha': 1, 'pad': 10},\n",
+      "   148                                                       transform=ax1.transAxes)\n",
+      "   149                                           \n",
+      "   150                                                   # 'learning' curve\n",
+      "   151                                                   ax2 = fig.add_subplot(122, xlim=(0, num_iter), ylim=(0, 1))\n",
+      "   152                                           \n",
+      "   153                                                   learning_curve, = ax2.plot(iterations, similarity, lw=2)\n",
+      "   154                                                   ax2.set_xlabel('Iteration')\n",
+      "   155                                                   ax2.set_ylabel('Similarity')\n",
+      "   156                                                   ax2.grid()\n",
+      "   157                                           \n",
+      "   158                                               # perform 'num_iter' gradient ascent updates\n",
+      "   159       201       5143.0     25.6      0.0      for k in np.arange(num_iter):\n",
+      "   160                                                   # gradient ascent\n",
+      "   161       200  312743162.0    2e+06     93.1          g = reg.ngradient(fun, x)\n",
+      "   162       200     118679.0    593.4      0.0          x += g*mu\n",
+      "   163                                                   \n",
+      "   164                                                   # for visualization of the result\n",
+      "   165       200   22047190.0 110235.9      6.6          S, Im_t, _ = reg.affine_corr(I, Im, x, return_transform=True)\n",
+      "   166       200       1947.0      9.7      0.0          if imshow:\n",
+      "   167                                                       clear_output(wait = True)\n",
+      "   168                                           \n",
+      "   169                                                       # update moving image and parameters\n",
+      "   170                                                       im2.set_data(Im_t)\n",
+      "   171                                                       txt.set_text(np.array2string(x, precision=5, floatmode='fixed'))\n",
+      "   172                                           \n",
+      "   173                                                       # update 'learning' curve\n",
+      "   174                                                       similarity[k] = S\n",
+      "   175                                                       learning_curve.set_ydata(similarity)\n",
+      "   176                                           \n",
+      "   177                                                       display(fig)\n",
+      "   178       200      13619.0     68.1      0.0          similarity[k] = S  \n",
+      "   179         1     533189.0 533189.0      0.2      print(f'Final similarity of ca. {S}')\n",
+      "   180         1          9.0      9.0      0.0      return similarity"
+     ]
     }
    ],
    "source": [
     "## 2: Affine intensity-based registration of two T1 slices (e.g. `1_1_t1.tif` and `1_1_t1_d.tif`) \n",
     "# using normalized cross-correlation as a similarity measure.\n",
     "from registration_project import affine_reg_cc_demo\n",
-    "\n",
-    "affine_reg_cc_demo('../data/image_data/1_1_t1.tif','../data/image_data/1_1_t1_d.tif',False)"
+    "affine_reg_cc_demo affine_reg_cc_demo(r\"../data/image_data/1_1_t1.tif\",r\"../data/image_data/1_1_t1_d.tif\",False)"
    ]
   },
   {
