--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "### import and read data ###\n",
-    "path = 'source\\data\\image_data'\n"
+    "path = 'source\\data\\image_data'\n",
+    "\n"
    ]
   },
   {
@@ -57,7 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Statistical analysis ###"
+    "### Statistical analysis ###\n",
+    "\n",
+    "# input: list of computation times per type of registration\n",
+    "# input: list of computation times per formula\n",
+    "\n",
+    "# output: significance testing between the types of registration\n",
+    "# output: power analysis of significance testing\n"
    ]
   }
  ],
