--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -152,7 +152,8 @@
    "source": [
     "### Registration ###\n",
     "# We can proba\n",
-    "%lprun -f affine_reg_cc_demo affine_reg_cc_demo(r\"../data/image_data/1_1_t1.tif\",r\"../data/image_data/1_1_t1_d.tif\",False) # example"
+    "%lprun -f affine_reg_cc_demo affine_reg_cc_demo(r\"../data/image_data/1_1_t1.tif\",r\"../data/image_data/1_1_t1_d.tif\",False) # example, but not applicable for current usage\n",
+    "res = %timeit -o rigid_reg_cc_demo('../data/image_data/1_1_t1.tif','../data/image_data/1_1_t1_d.tif',False) # for the main registration problem"
    ]
   },
   {
@@ -167,7 +168,8 @@
     "# input: list of computation times per formula\n",
     "\n",
     "# output: significance testing between the types of registration\n",
-    "# output: power analysis of significance testing\n"
+    "# output: power analysis of significance testing\n",
+    "# output: Boxplots for the computation time data spread\n"
    ]
   }
  ],
