Working on statistical analysis

--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -32,6 +32,8 @@
     "%load_ext line_profiler\n",
     "import sys\n",
     "sys.path.append(\"../code\")\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
     "from registration_project import rigid_reg_cc_demo, affine_reg_cc_demo, affine_reg_mi_demo"
    ]
   },
@@ -164,9 +166,28 @@
    "source": [
     "### Statistical analysis ###\n",
     "\n",
-    "# input: list of computation times per type of registration\n",
-    "# input: list of computation times per formula\n",
+    "# input: list of computation times per type of registration: time_rigid, time_affine, time_rigid_all, time_affine_all\n",
+    "# input: list of computation times per formula: rigid_cc_time, affine_cc_time, affine_mi_time\n",
     "\n",
+    "aggr_rigid_affine = time_rigid + time_affine # List containing all tests, containing the time using our chosen method\n",
+    "data = [np.transpose(time_rigid),np.transpose(time_affine),np.transpose(time_rigid_all),np.transpose(time_affine_all)]\n",
+    "df_time = pd.DataFrame(data,columns=['T_rigid',\n",
+    "                                     'T_affine',\n",
+    "                                     'T_rigid_all',\n",
+    "                                     'T_affine_all'])\n",
+    "box = df.bosplot(grid=True)\n",
+    "box.plot(figsize=(1,3))\n",
+    "\n",
+    "# Test for equal variance\n",
+    "print(\"Variance of comp. time for rigid transformations: \",np.var(a=df_time['T_rigid'])\n",
+    "print(\"Variance of comp. time for affine transformations: \",np.var(a=df_time['T_affine'])\n",
+    "\n",
+    "# Variance vary less than factor 4:\n",
+    "    # Test if the computation time to use affine transformation compared to rigid transformation is longer\n",
+    "print(\"t test affine_all>rigid_all: \",stats.ttest_ind(a=df_time['T_affine_all'],b=df_time['T_rigid_all'], equal_var=True,alternative='greater')) \n",
+    "\n",
+    "    # Test if the computation time \n",
+    "print(\"t test \")\n",
     "# output: significance testing between the types of registration\n",
     "# output: power analysis of significance testing\n",
     "# output: Boxplots for the computation time data spread\n"
