Setup statistical testing

--- a/source/reader/1.6_Registration_project.ipynb
+++ b/source/reader/1.6_Registration_project.ipynb
@@ -311,7 +311,6 @@
    ],
    "source": [
     "## Affine correlation test\n",
-    "s\n",
     "from registration import affine_corr\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -324,21 +323,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 1.0000000000000002]\n",
-      "[0, 0, 0, 1.0000000000000002, 1.0000000000000002]\n",
-      "[0, 0, 1.0000000000000002, 1.0000000000000002, 1.0000000000000002]\n",
-      "[0, 1.0000000000000002, 1.0000000000000002, 1.0000000000000002, 0.9999997555352644]\n",
-      "[1.0000000000000002, 1.0000000000000002, 1.0000000000000002, 0.9999997555352644, 0.9999952380252086]\n",
-      "[1.0000000000000002, 1.0000000000000002, 0.9999997555352644, 0.9999952380252086, 0.9999651299947491]\n",
-      "[1.0000000000000002, 0.9999997555352644, 0.9999952380252086, 0.9999651299947491, 0.99974597366736]\n",
-      "Final similarity of ca. 0.99974597366736\n"
+      "562 ms ± 41.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "Final similarity of ca. 0.99974597366736\n",
+      "562 ms ± 41.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -348,8 +365,7 @@
     "import sys\n",
     "sys.path.append(\"../code\")\n",
     "from registration_project import rigid_reg_cc_demo\n",
-    "\n",
-    "rigid_reg_cc_demo('../data/image_data/1_1_t1.tif','../data/image_data/1_1_t1_d.tif',False)"
+    "res = %timeit -o rigid_reg_cc_demo('../data/image_data/1_1_t1.tif','../data/image_data/1_1_t1_d.tif',False)"
    ]
   },
   {
