--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -168,14 +168,21 @@
     "\n",
     "# input: list of computation times per type of registration: time_rigid, time_affine, time_rigid_all, time_affine_all\n",
     "# input: list of computation times per formula: rigid_cc_time, affine_cc_time, affine_mi_time\n",
+    "# input: list of affine transformation matrices per registration: transformations (rot, scalex, scaley, shearx, sheary, translatex, translatey)\n",
+    "\n",
+    "# output: significance testing between the types of registration\n",
+    "# output: power analysis of significance testing\n",
+    "# output: Boxplots for the computation time data spread\n",
+    "\n",
     "\n",
     "aggr_rigid_affine = time_rigid + time_affine # List containing all tests, containing the time using our chosen method\n",
-    "data = [np.transpose(time_rigid),np.transpose(time_affine),np.transpose(time_rigid_all),np.transpose(time_affine_all)]\n",
+    "data = [np.transpose(time_rigid),np.transpose(time_affine),np.transpose(aggr_rigid_affine),np.transpose(time_rigid_all),np.transpose(time_affine_all)]\n",
     "df_time = pd.DataFrame(data,columns=['T_rigid',\n",
     "                                     'T_affine',\n",
+    "                                     'T_aggr_all'\n",
     "                                     'T_rigid_all',\n",
     "                                     'T_affine_all'])\n",
-    "box = df.bosplot(grid=True)\n",
+    "box = df_time.boxplot(grid=True)\n",
     "box.plot(figsize=(1,3))\n",
     "\n",
     "# Test for equal variance\n",
@@ -186,11 +193,38 @@
     "    # Test if the computation time to use affine transformation compared to rigid transformation is longer\n",
     "print(\"t test affine_all>rigid_all: \",stats.ttest_ind(a=df_time['T_affine_all'],b=df_time['T_rigid_all'], equal_var=True,alternative='greater')) \n",
     "\n",
-    "    # Test if the computation time \n",
-    "print(\"t test \")\n",
-    "# output: significance testing between the types of registration\n",
-    "# output: power analysis of significance testing\n",
-    "# output: Boxplots for the computation time data spread\n"
+    "    # Test if the aggregated computation time is shorter than all affine registration  \n",
+    "print(\"t test affine_all>aggr: \",stats.ttest_ind(a=df_time['T_affine_all'],b=df_time['T_aggr_all'], equal_var=True,alternative='greater'))\n",
+    "\n",
+    "# See if our decision program is working well\n",
+    "rigid_decision = [1 if time_rigid[i].isnumeric() for i in range(len(time_rigid)) else 0] # Records if rigid was chosen\n",
+    "# transform_rigid = transformations[rigid_decision] # affine transformation matrices for which we used rigid\n",
+    "# transform_affine = transformations[~rigid_decision] # affine transformation matrices for which we used affine\n",
+    "data2 = [rigid_decision]\n",
+    "sum_affine = transformations[:][1]+transformations[:][2]+transformations[:][3]+transformations[:][4]\n",
+    "df_transform = pd.DataFrame({\"Decision\": rigid_decision,\n",
+    "                             \"Sum_affine\": sum_affine})\n",
+    "box2 = df_transform.plot.box(column=\"Sum_affine\",by=\"Decision\",figsize=(5,5))\n",
+    "\n",
+    "# Basic statistics of the average shear and scaling present \n",
+    "    # Shear\n",
+    "print(\"Mean of all shear: \",mean(transformations[:][1:2]))\n",
+    "print(\"Mean of shear of rigid: \", mean(transformation[rigid_decision][1:2]))\n",
+    "print(\"Mean of shear of affine: \", mean(transformation[rigid_decision][1:2]))\n",
+    "\n",
+    "print(\"Variance of all shear: \",var(transformations[:][1:2]))\n",
+    "print(\"Variance of shear of rigid: \", var(transformation[rigid_decision][1:2]))\n",
+    "print(\"Variance of shear of affine: \", var(transformation[rigid_decision][1:2]))\n",
+    "\n",
+    "    #Scaling\n",
+    "print(\"Mean of all scaling: \",mean(transformations[:][3:4]))\n",
+    "print(\"Mean of scaling of rigid: \", mean(transformation[~rigid_decision][3:4]))\n",
+    "print(\"Mean of scaling of affine: \", mean(transformation[~rigid_decision][3:4]))\n",
+    "\n",
+    "print(\"Variance of all scaling: \",var(transformations[:][3:4]))\n",
+    "print(\"Variance of scaling of rigid: \", var(transformation[~rigid_decision][3:4]))\n",
+    "print(\"Variance of scaling of affine: \", var(transformation[~rigid_decision][3:4]))\n",
+    "\n"
    ]
   }
  ],
