Image pair reading

--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -24,25 +24,60 @@
     "%matplotlib inline\n",
     "# ! if you want to use this, run  'conda install -c conda-forge scalene' for your conda env\n",
     "#%load_ext scalene \n",
-    "# ! Or 'conda install -c conda-forge line_profiler' for this one.\n",
-    "%load_ext line_profiler\n",
+    "# ! Or 'conda install -c conda-forge line_proimgr' for this one.\n",
+    "%load_ext line_proimgr\n",
     "import sys\n",
-    "sys.path.append(\"../code\")\n",
+    "import os\n",
+    "from itertools import combinations\n",
     "import numpy as np\n",
     "import pandas as pd # You might have to install this into your environment\n",
     "import scipy.stats as stats \n",
-    "from registration_project import rigid_reg_cc_demo, affine_reg_cc_demo, affine_reg_mi_demo"
+    "from registration_project import rigid_reg_cc_demo, affine_reg_cc_demo, affine_reg_mi_demo\n",
+    "sys.path.append(\"../code\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('1_1_t1.tif', '1_1_t1_d.tif'), ('1_1_t1.tif', '1_1_t2.tif'), ('1_1_t1_d.tif', '1_1_t2.tif'), ('1_2_t1.tif', '1_2_t1_d.tif'), ('1_2_t1.tif', '1_2_t2.tif'), ('1_2_t1_d.tif', '1_2_t2.tif'), ('1_3_t1.tif', '1_3_t1_d.tif'), ('1_3_t1.tif', '1_3_t2.tif'), ('1_3_t1_d.tif', '1_3_t2.tif'), ('2_1_t1.tif', '2_1_t1_d.tif'), ('2_1_t1.tif', '2_1_t2.tif'), ('2_1_t1_d.tif', '2_1_t2.tif'), ('2_2_t1.tif', '2_2_t1_d.tif'), ('2_2_t1.tif', '2_2_t2.tif'), ('2_2_t1_d.tif', '2_2_t2.tif'), ('2_3_t1.tif', '2_3_t1_d.tif'), ('2_3_t1.tif', '2_3_t2.tif'), ('2_3_t1_d.tif', '2_3_t2.tif'), ('3_1_t1.tif', '3_1_t1_d.tif'), ('3_1_t1.tif', '3_1_t2.tif'), ('3_1_t1_d.tif', '3_1_t2.tif'), ('3_2_t1.tif', '3_2_t1_d.tif'), ('3_2_t1.tif', '3_2_t2.tif'), ('3_2_t1_d.tif', '3_2_t2.tif'), ('3_3_t1.tif', '3_3_t1_d.tif'), ('3_3_t1.tif', '3_3_t2.tif'), ('3_3_t1_d.tif', '3_3_t2.tif')]\n"
+     ]
+    }
+   ],
    "source": [
     "### import and read data ###\n",
-    "path = 'source\\data\\image_data'\n",
-    "\n"
+    "path = '..\\data\\image_data'\n",
+    "\n",
+    "# Get the list of images\n",
+    "images = os.listdir(path)\n",
+    "images.sort()\n",
+    "\n",
+    "image_pairs = []\n",
+    "grouped_images = {}\n",
+    "\n",
+    "# Group images by their first three characters (I don't know if this is best)\n",
+    "for img in images:\n",
+    "    start = img[:3]  # Get the first three characters of the img name\n",
+    "    if start in grouped_images:\n",
+    "        grouped_images[start].append(img)\n",
+    "    else:\n",
+    "        grouped_images[start] = [img]\n",
+    "\n",
+    "# Create pairs\n",
+    "for key, group in grouped_images.items():\n",
+    "    # Sort the group (optional, to maintain a consistent order)\n",
+    "    group.sort()\n",
+    "    \n",
+    "    # Create all possible pairs from the group\n",
+    "    if len(group) > 1:\n",
+    "        image_pairs.extend(list(combinations(group, 2)))\n",
+    "\n",
+    "print(image_pairs)"
    ]
   },
   {
@@ -150,7 +185,17 @@
    ],
    "source": [
     "### Registration ###\n",
-    "# We can proba\n",
+    "# input:\n",
+    "# image_pairs ()\n",
+    "# \n",
+    "# \n",
+    "\n",
+    "# output: \n",
+    "# [list] computation times per formula: rigid_cc_time, affine_cc_time, affine_mi_time --> no processing is done with this, these are nice-to-haves\n",
+    "# [list] computation times per type of registration: time_rigid, time_affine, time_rigid_all, time_affine_all\n",
+    "# [list] affine transformation matrices per registration: transformations (rot, scalex, scaley, shearx, sheary, translatex, translatey)\n",
+    "\n",
+    "\n",
     "%lprun -f affine_reg_cc_demo affine_reg_cc_demo(r\"../data/image_data/1_1_t1.tif\",r\"../data/image_data/1_1_t1_d.tif\",False) # example, but not applicable for current usage\n",
     "res = %timeit -o rigid_reg_cc_demo('../data/image_data/1_1_t1.tif','../data/image_data/1_1_t1_d.tif',False) # for the main registration problem"
    ]
