--- a/source/reader/main.ipynb
+++ b/source/reader/main.ipynb
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test variables (assume dataset of 10)\n",
+    "# Test variables to test statistical analysis(assume dataset of 10)\n",
     "time_rigid = [64098,23249,0,0,57892,0,43897,0,0,0]\n",
     "time_affine = [0,0,98022,78923,0,298200,0,89023,67239,29870]\n",
     "time_rigid_all = [64098,23249,24798,58302,57892,42309,43897,28342,8902,78230]\n",
@@ -270,8 +270,7 @@
    "source": [
     "# See if our decision program is working well\n",
     "rigid_decision = np.array([True if time_rigid[i]>0 else False for i in range(len(time_rigid))]) # Records if rigid was chosen\n",
-    "# transform_rigid = transformations[rigid_decision] # affine transformation matrices for which we used rigid\n",
-    "# transform_affine = transformations[~rigid_decision] # affine transformation matrices for which we used affine\n",
+    "\n",
     "data2 = [rigid_decision]\n",
     "sum_affine = [transformations[i][1]+transformations[i][2]+transformations[i][3]+transformations[i][4] for i in range(len(transformations))]\n",
     "df_transform = pd.DataFrame({\"Decision\": rigid_decision,\n",
